<resources>

    //Pantalla inicio

    <string name="app_name">SoundBike</string>
    <string name="entrar">Entrar</string>

    //Pantalla login

    <string name="title_login">¡Te damos la bienvenida de nuevo!</string>
    <string name="title_user">Usuario*</string>
    <string name="title_password">Contraseña*</string>
    <string name="title_btn_login">Iniciar sesión</string>
    <string name="title_singup">¿No tienes cuenta?</string>
    <string name="title_btn_singup">Registrate</string>

    //Pantalla Sing Up

    <string name="title_sing_up">¡Crear una cuenta!</string>
    <string name="title_new_user">Crea un usuario*</string>
    <string name="title_new_email">Ingresa tu Correo electronico*</string>
    <string name="title_new_password">Crea tu contraseña*</string>
    <string name="title_btn_sing_up">Registrarse</string>

    //Pantalla Home

    <string name="welcome">¡Bienvenido!</string>
    <string name="age">Escribe el año actual</string>
    <string name="btn_question">Responder</string>
    <string name="btn_datos">Mostrar Datos</string>
    <string name="btn_camera">Abrir Cámara</string>
    <string name="copyright">by SoundBike 2024 ©</string>


</resources>