<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/Background"
    android:gravity="center">

    <LinearLayout
        android:background="@drawable/border_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_margin="20dp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/title_login"
            android:textSize="20sp"
            android:textStyle="bold"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_user"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/border_input">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_password"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/border_input">

            </EditText>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_login"
            android:backgroundTint="@color/Button"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_margin="20dp">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_singup"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_singup"
            android:backgroundTint="@color/Button"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_margin="30dp">
        </Button>

    </LinearLayout>

</LinearLayout>