<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity"
    android:orientation="vertical"
    android:background="@color/Background"
    android:gravity="center">

    <LinearLayout
        android:background="@drawable/border_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_margin="20dp">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_sing_up"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_new_user"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_input"
                android:paddingStart="10dp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_new_email"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_input"
                android:paddingStart="10dp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/title_new_password"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/border_input"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/Btn_New_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_btn_sing_up"
            android:backgroundTint="@color/Button"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_margin="30dp">
        </Button>

    </LinearLayout>

</LinearLayout>