<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/Background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_container"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/age"
                android:textSize="20sp">

            </TextView>

            <EditText
                android:id="@+id/Respuesta"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/border_input"
                android:inputType="number"
                android:paddingStart="10dp">

            </EditText>

            <Button
                android:id="@+id/Btn_Respuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/btn_question">

            </Button>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/Footer"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center">
        </TextView>

    </LinearLayout>


</RelativeLayout>